Add category + add migrations

--- a/BulkyBook.Models/BulkyBook.Models.csproj
+++ b/BulkyBook.Models/BulkyBook.Models.csproj
@@ -9,11 +9,13 @@
   <ItemGroup>
     <None Remove="ViewModels\" />
     <None Remove="Microsoft.AspNetCore.Mvc.ViewFeatures" />
+    <None Remove="Microsoft.Extensions.Identity.Stores" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.2" />
   </ItemGroup>
 </Project>
