--- a/BulkyBookWeb/BulkyBookWeb.csproj
+++ b/BulkyBookWeb/BulkyBookWeb.csproj
@@ -32,6 +32,7 @@
     <None Remove="Microsoft.EntityFrameworkCore.Sqlite" />
     <None Remove="Areas\Customer\Views\Cart\" />
     <None Remove="Stripe.net" />
+    <None Remove="Areas\Admin\Views\Order\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
@@ -51,6 +52,7 @@
     <Folder Include="Areas\Identity\Pages\Account\" />
     <Folder Include="Areas\Identity\Pages\Account\Manage\" />
     <Folder Include="Areas\Customer\Views\Cart\" />
+    <Folder Include="Areas\Admin\Views\Order\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
